# bevy_gltf_animation

./: CHANGELOG.md  Cargo.toml  README.md
examples/: basic.rs  human.rs  idle.rs  idle_repeat.rs  names.rs  transitions.rs
src/: animation_link.rs  gltf_scene.rs  lib.rs  player.rs
