[package]
name = "bevy_gltf_animation"
version = "0.1.0"
authors = ["dsgallups <dsgallups@protonmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dsgallups/bevy_gltf_animation"
documentation = "https://docs.rs/bevy_gltf_animation"
description = "Minimal animation setup for gltf files"
keywords = ["gamedev", "bevy", "animation", "gltf"]
categories = ["game-development"]
exclude = ["assets/*"]

[features]
extended = []

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_scene",
    "bevy_log",
    "bevy_gltf",
    "bevy_animation",
] }
bevy_gltf = { version = "0.16.0", features = ["bevy_animation"] }

[dev-dependencies]
bevy = "0.16"

[lints.clippy]
type-complexity = "allow"
too-many-arguments = "allow"

[[example]]
name = "human"
required-features = ["extended"]
